--- a/angular-myownweb/src/styles.css
+++ b/angular-myownweb/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.contenedor{
+    margin: 0 100px;
+    padding-bottom: 100px;
+}
+
+body{
+    height: fit-content;
+}
