add about me form and show translate strings

--- a/angular-myownweb/src/app/info/about-me/about-me.component.html
+++ b/angular-myownweb/src/app/info/about-me/about-me.component.html
@@ -1,1 +1,8 @@
 <p>about-me works!</p>
+
+<ng-container>
+    <button mat-flat-button (click)="testString('aboutMe.err.endDate')">click</button>
+</ng-container>
+@if(test){
+    <h1>{{test}}</h1>
+}
