add animation auto hide and show

--- a/angular-myownweb/src/app/app.component.html
+++ b/angular-myownweb/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-menu></app-menu>
 
-<div class="contenedor">
+<button class="dowArrow" mat-icon-button (click)="show()"><mat-icon>arrow_drop_down</mat-icon></button>
+
+<div class="container">
     <router-outlet></router-outlet>
 </div>
