--- a/angular-myownweb/src/app/menu/menu/menu.component.html
+++ b/angular-myownweb/src/app/menu/menu/menu.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="matToolBar">
     <span>
         <a mat-button routerLink="">
             <mat-icon>home</mat-icon>
