--- a/angular-myownweb/src/styles.css
+++ b/angular-myownweb/src/styles.css
@@ -1,7 +1,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.contenedor{
+.container{
     margin: 0 100px;
     padding-bottom: 100px;
 }
