--- a/angular-myownweb/src/app/menu/menu/menu.component.html
+++ b/angular-myownweb/src/app/menu/menu/menu.component.html
@@ -7,7 +7,7 @@
     </span>
 
     <div>
-        <a mat-button routerLink="/{{[urlStrings.urlAboutMe]}}">
+        <a mat-button routerLink="{{[urlStrings.urlAboutMe]}}">
             <mat-icon>person</mat-icon>
             {{'aboutMe' | translate}}
         </a>
@@ -16,7 +16,7 @@
     <div class="space"> </div>
 
     <div>
-        <a mat-button routerLink="/{{[urlStrings.urlShowTranslateStrings]}}">
+        <a mat-button routerLink="{{[urlStrings.urlShowTranslateStrings]}}">
             <mat-icon>menu_book</mat-icon>
             {{'showStrings' | translate}}
         </a>
