--- a/angular-myownweb/src/app/tools/show-translate-strings/show-translate-strings.component.html
+++ b/angular-myownweb/src/app/tools/show-translate-strings/show-translate-strings.component.html
@@ -5,6 +5,14 @@
     <p>changeLanguage.en: {{'changeLanguage.en' | translate}}</p>
     <p>home: {{'home' | translate}}</p>
     <p>showStrings: {{'showStrings' | translate}}</p>
+    <p>save: {{'save' | translate}}</p>
+    <p>cancel: {{'cancel' | translate}}</p>
+    <p>actions: {{'actions' | translate}}</p>
+    <p>edit: {{'edit' | translate}}</p>
+    <p>delete: {{'delete' | translate}}</p>
+    <p>confirm: {{'confirm' | translate}}</p>
+    <p>deleteRecord: {{'deleteRecord' | translate}}</p>
+    <p>genericList.notElement: {{'genericList.notElement' | translate}}</p>
 </div>
 
 <div>
@@ -16,4 +24,17 @@
     <p>aboutMe.err.endDate: {{'aboutMe.err.endDate' | translate}}</p>
     <p>aboutMe.err.enProject: {{'aboutMe.err.enProject' | translate}}</p>
     <p>aboutMe.err.enSkills: {{'aboutMe.err.enSkills' | translate}}</p>
+</div>
+
+<div>
+    <h2>{{'createExperience' | translate}}</h2>
+    <p>createExperience: {{'createExperience' | translate}}</p>
+    <p>createExperience.title: {{'createExperience.title' | translate}}</p>
+    <p>createExperience.resume: {{'createExperience.resume' | translate}}</p>
+    <p>createExperience.startDate: {{'createExperience.startDate' | translate}}</p>
+    <p>createExperience.endDate: {{'createExperience.endDate' | translate}}</p>
+    <p>createExperience.project: {{'createExperience.project' | translate}}</p>
+    <p>createExperience.skills: {{'createExperience.skills' | translate}}</p>
+    <p>createExperience.urlToProject: {{'createExperience.urlToProject' | translate}}</p>
+    <p>createExperience.currentWork: {{'createExperience.currentWork' | translate}}</p>
 </div>
