--- a/angular-myownweb/src/app/app.component.html
+++ b/angular-myownweb/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-menu></app-menu>
 
-<button class="dowArrow" mat-icon-button [disabled]="clickable" (click)="show()"><mat-icon>arrow_drop_down</mat-icon></button>
+<div class="dowArrow">
+    <button mat-icon-button [disabled]="clickable"
+        (click)="show()"><mat-icon>arrow_drop_down</mat-icon></button>
+</div>
 
 <div class="container">
     <router-outlet></router-outlet>
