--- a/angular-myownweb/src/styles.css
+++ b/angular-myownweb/src/styles.css
@@ -28,6 +28,10 @@ body{
 .container-Buttons {
     margin-top: 1rem;
 }
+.container-Buttons button{
+    margin-right: 5px;
+    margin-bottom: 5px;
+}
 
 .dowArrow{
     position: fixed;
