Change structure for back-end

--- a/angular-myownweb/src/app/ui/pages/about-me-page/about-me-form/about-me-form.component.html
+++ b/angular-myownweb/src/app/ui/pages/about-me-page/about-me-form/about-me-form.component.html
@@ -89,6 +89,6 @@
 
     <div class="container-Buttons">
         <button type="submit" mat-flat-button [disabled]="form.invalid">{{"save" | translate}}</button>
-        <a mat-stroked-button routerLink="/actores">{{"cancel" | translate}}</a>
+        <a mat-stroked-button routerLink="/{{urlStrings.urlAboutMe}}">{{"cancel" | translate}}</a>
     </div>
 </form>
