--- a/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
+++ b/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
@@ -38,3 +38,8 @@
     <p>createExperience.urlToProject: {{'createExperience.urlToProject' | translate}}</p>
     <p>createExperience.currentWork: {{'createExperience.currentWork' | translate}}</p>
 </div>
+
+<div>
+    <h2>{{'editExperience' | translate }}</h2>
+    <p>editExperience {{'editExperience' | translate }}</p>
+</div>
