--- a/angular-myownweb/src/app/ui/pages/about-me-page/about-me-form/about-me-form.component.html
+++ b/angular-myownweb/src/app/ui/pages/about-me-page/about-me-form/about-me-form.component.html
@@ -44,7 +44,7 @@
                 <div>{{'changeLanguage.es'| translate}}</div>
             </ng-template>
 
-            <mat-form-field class="area-form-small" appearance="outline">
+            <mat-form-field class="area-form-small" style="margin-top: 10px;" appearance="outline">
                 <mat-label>{{'createExperience.title'| translate}}</mat-label>
                 <input matInput [formControl]="form.controls.esTitle" />
             </mat-form-field>
@@ -68,6 +68,22 @@
             </mat-form-field>
         </mat-tab>
     </mat-tab-group>
+
+    <div style="margin-top: 1rem;"></div>
+    <mat-form-field class="area-form-small" appearance="outline">
+        <mat-label>{{'createExperience.companyName'| translate}}</mat-label>
+        <textarea matInput [formControl]="form.controls.companyName"></textarea>
+    </mat-form-field>
+
+    <div></div>
+    <mat-form-field class="area-form-small" appearance="outline">
+        <mat-label>{{'createExperience.urlToProject'| translate}}</mat-label>
+        <textarea matInput [formControl]="form.controls.urlToProject"></textarea>
+    </mat-form-field>
+
+    <div></div>
+    <mat-checkbox matInput [formControl]="form.controls.currentWork" (ngModelChange)="disableEndDate($event)">{{'createExperience.currentWork' |
+        translate}}</mat-checkbox>
 
     <div style="margin-top: 1rem;"></div>
     <mat-form-field appearance="outline">
