--- a/angular-myownweb/src/app/ui/pages/about-me-page/about-me/about-me.component.html
+++ b/angular-myownweb/src/app/ui/pages/about-me-page/about-me/about-me.component.html
@@ -1,4 +1,6 @@
 <app-index-entity title="{{'aboutMe' | translate}}" 
 urlCreate="/{{[urlString.urlCreateExperience]}}" 
-urlEdit="/{{[urlString.urlCreateExperience]}}">
+urlEdit="/{{[urlString.urlEditExperience]}}"
+[columnsToShow]="columnsToShow"
+[transalteString]="transalteString">
 </app-index-entity>
