finish edit component

--- a/angular-myownweb/src/app/ui/pages/about-me-page/about-me-form/about-me-form.component.html
+++ b/angular-myownweb/src/app/ui/pages/about-me-page/about-me-form/about-me-form.component.html
@@ -73,6 +73,7 @@
     <mat-form-field class="area-form-small" appearance="outline">
         <mat-label>{{'createExperience.companyName'| translate}}</mat-label>
         <textarea matInput [formControl]="form.controls.companyName"></textarea>
+        <mat-error>{{getErrorCompany()}}</mat-error>
     </mat-form-field>
 
     <div></div>
