--- a/angular-myownweb/src/app/ui/pages/about-me-page/edit-experience/edit-experience.component.html
+++ b/angular-myownweb/src/app/ui/pages/about-me-page/edit-experience/edit-experience.component.html
@@ -1,5 +1,5 @@
-<app-create-entity
+<app-edit-entity
 [form]="aboutMeForm"
-title="{{'editExperience' | translate: {param: experienceTitle} }}"
+title="{{'editExperience' | translate}}"
 indexRoute="/{{[urlStrings.urlAboutMe]}}"
-[id]="id"></app-create-entity>
+[id]="id"></app-edit-entity>
