--- a/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
+++ b/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
@@ -24,6 +24,7 @@
     <p>aboutMe.err.endDate: {{'aboutMe.err.endDate' | translate}}</p>
     <p>aboutMe.err.enProject: {{'aboutMe.err.enProject' | translate}}</p>
     <p>aboutMe.err.enSkills: {{'aboutMe.err.enSkills' | translate}}</p>
+    <p>aboutMe.err.companyName: {{'aboutMe.err.companyName' | translate}}</p>
 </div>
 
 <div>
