--- a/angular-myownweb/src/app/ui/templates/generic-list/generic-list.component.html
+++ b/angular-myownweb/src/app/ui/templates/generic-list/generic-list.component.html
@@ -4,7 +4,7 @@
     </div>
 
     @if(!loading.innerHTML.trim()){
-        <img src="Loading.gif" />
+        <app-loading></app-loading>
     }
 }
 @else if (list.length == 0){
