move experience functionality from about me to experience

--- a/angular-myownweb/src/app/ui/features/menu/menu.component.html
+++ b/angular-myownweb/src/app/ui/features/menu/menu.component.html
@@ -13,6 +13,13 @@
         </a>
     </div>
 
+    <div>
+        <a mat-button routerLink="{{[urlStrings.urlExperience]}}">
+            <mat-icon>business_center</mat-icon>
+            {{'experience' | translate}}
+        </a>
+    </div>
+
     <div class="space"> </div>
 
     <div>
