--- a/angular-myownweb/src/app/ui/pages/experience-page/create-experience/create-experience.component.html
+++ b/angular-myownweb/src/app/ui/pages/experience-page/create-experience/create-experience.component.html
@@ -1,4 +1,4 @@
 <app-create-entity
-[form]="aboutMeForm"
-indexRoute="/{{[urlStrings.urlAboutMe]}}"
+[form]="experienceForm"
+indexRoute="/{{[urlStrings.urlExperience]}}"
 title="{{'createExperience' | translate}}"></app-create-entity>
