--- a/angular-myownweb/src/app/ui/pages/experience-page/edit-experience/edit-experience.component.html
+++ b/angular-myownweb/src/app/ui/pages/experience-page/edit-experience/edit-experience.component.html
@@ -1,5 +1,5 @@
 <app-edit-entity
-[form]="aboutMeForm"
+[form]="experienceForm"
 title="{{'editExperience' | translate}}"
-indexRoute="/{{[urlStrings.urlAboutMe]}}"
+indexRoute="/{{[urlStrings.urlExperience]}}"
 [id]="id"></app-edit-entity>
