adding login and register, make modular the show translatestirng

--- a/angular-myownweb/src/app/ui/features/menu/menu.component.html
+++ b/angular-myownweb/src/app/ui/features/menu/menu.component.html
@@ -29,4 +29,11 @@
         </a>
     </div>
 
+    <div>
+        <a mat-button routerLink="{{[urlStrings.urlLogin]}}">
+            <mat-icon>login</mat-icon>
+            {{'authorization.login' | translate}}
+        </a>
+    </div>
+
 </mat-toolbar>
