--- a/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
+++ b/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
@@ -1,46 +1,29 @@
-<div>
-    <h2>{{'home' | translate}}</h2>
-    <p>noPageFound: {{'noPageFound' | translate}}</p>
-    <p>changeLanguage.es: {{'changeLanguage.es' | translate}}</p>
-    <p>changeLanguage.en: {{'changeLanguage.en' | translate}}</p>
-    <p>home: {{'home' | translate}}</p>
-    <p>showStrings: {{'showStrings' | translate}}</p>
-    <p>save: {{'save' | translate}}</p>
-    <p>cancel: {{'cancel' | translate}}</p>
-    <p>actions: {{'actions' | translate}}</p>
-    <p>edit: {{'edit' | translate}}</p>
-    <p>delete: {{'delete' | translate}}</p>
-    <p>confirm: {{'confirm' | translate}}</p>
-    <p>deleteRecord: {{'deleteRecord' | translate}}</p>
-    <p>genericList.notElement: {{'genericList.notElement' | translate}}</p>
-</div>
+<h2>{{'showStrings' | translate}}</h2>
 
-<div>
-    <h2>{{'aboutMe' | translate}}</h2>
-    <p>aboutMe: {{'aboutMe' | translate}}</p>
-    <p>aboutMe.err.entitle: {{'aboutMe.err.entitle' | translate}}</p>
-    <p>aboutMe.err.enResume: {{'aboutMe.err.enResume' | translate}}</p>
-    <p>aboutMe.err.startDate: {{'aboutMe.err.startDate' | translate}}</p>
-    <p>aboutMe.err.endDate: {{'aboutMe.err.endDate' | translate}}</p>
-    <p>aboutMe.err.enProject: {{'aboutMe.err.enProject' | translate}}</p>
-    <p>aboutMe.err.enSkills: {{'aboutMe.err.enSkills' | translate}}</p>
-    <p>aboutMe.err.companyName: {{'aboutMe.err.companyName' | translate}}</p>
-</div>
+<mat-form-field class="mat-elevation-z8">
+    <mat-label>Filter</mat-label>
+    <input matInput type="search" (keyup)="applyFilter($event)" #input>
+</mat-form-field>
 
-<div>
-    <h2>{{'createExperience' | translate}}</h2>
-    <p>createExperience: {{'createExperience' | translate}}</p>
-    <p>createExperience.title: {{'createExperience.title' | translate}}</p>
-    <p>createExperience.resume: {{'createExperience.resume' | translate}}</p>
-    <p>createExperience.startDate: {{'createExperience.startDate' | translate}}</p>
-    <p>createExperience.endDate: {{'createExperience.endDate' | translate}}</p>
-    <p>createExperience.project: {{'createExperience.project' | translate}}</p>
-    <p>createExperience.skills: {{'createExperience.skills' | translate}}</p>
-    <p>createExperience.urlToProject: {{'createExperience.urlToProject' | translate}}</p>
-    <p>createExperience.currentWork: {{'createExperience.currentWork' | translate}}</p>
-</div>
+<table mat-table [dataSource]="propertiesList" class="mat-elevation-z8">
+    <ng-container matColumnDef="property">
+        <th mat-header-cell *matHeaderCellDef>{{'propierty' | translate}}</th>
+        <td mat-cell *matCellDef="let element"> {{element}} </td>
+    </ng-container>
 
-<div>
-    <h2>{{'editExperience' | translate }}</h2>
-    <p>editExperience {{'editExperience' | translate }}</p>
-</div>
+    <ng-container matColumnDef="translate">
+        <th mat-header-cell *matHeaderCellDef>{{'value' | translate}}</th>
+        <td mat-cell *matCellDef="let element"> {{element | translate}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToShow"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnsToShow;"></tr>
+
+    <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">{{'genericList.notElement' | translate}}: "{{input.value}}"</td>
+    </tr>
+</table>
+
+
+<mat-paginator class="mat-elevation-z8" showFirstLastButtons [pageSizeOptions]="pagination">
+</mat-paginator>
