--- a/angular-myownweb/src/app/ui/pages/authorization-page/register/register.component.css
+++ b/angular-myownweb/src/app/ui/pages/authorization-page/register/register.component.css
@@ -2,10 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(50%);
 }
 
 .form-container{
