--- a/angular-myownweb/src/app/ui/pages/authorization-page/authorization-form-registration/authorization-form-registration.component.html
+++ b/angular-myownweb/src/app/ui/pages/authorization-page/authorization-form-registration/authorization-form-registration.component.html
@@ -21,6 +21,6 @@
     </mat-form-field>
 
     <div>
-        <a class="container-Buttons" type="submit" mat-flat-button [disabled]="form.invalid">{{title}}</a>
+        <button class="container-Buttons" type="submit" mat-flat-button [disabled]="form.invalid">{{title}}</button>
     </div>
 </form>
