--- a/angular-myownweb/src/app/ui/pages/authorization-page/authorization-form-login/authorization-form-login.component.css
+++ b/angular-myownweb/src/app/ui/pages/authorization-page/authorization-form-login/authorization-form-login.component.css
@@ -8,5 +8,10 @@ mat-form-field {
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+    width: 500px;
 }
 
+/* button{
+    width: 500px;
+    max-width: 500px;
+} */
