--- a/angular-myownweb/src/app/ui/pages/authorization-page/login/login.component.html
+++ b/angular-myownweb/src/app/ui/pages/authorization-page/login/login.component.html
@@ -7,9 +7,10 @@
     </mat-grid-tile>
     <mat-grid-tile>
         <div class="auth-container">
-            <app-authorization-form [errors]="errors" title="{{'authorization.login' | translate}}"
-                (formPost)="login($event)">
-            </app-authorization-form>
+            <app-authorization-form-login [errors]="errors" title="{{'authorization.login' | translate}}"
+                (usernameLoginPost)="loginUsername($event)"
+                (emailLoginPost)="loginEmail($event)">
+            </app-authorization-form-login>
             <div>
                 <p class="container-Buttons">{{'authorization.haveAccount' | translate}}</p>
             </div>
