--- a/angular-myownweb/src/app/ui/pages/control-panel-page/user-control-panel/user-control-panel.component.css
+++ b/angular-myownweb/src/app/ui/pages/control-panel-page/user-control-panel/user-control-panel.component.css
@@ -1,3 +1,12 @@
 .index-elements{
     margin-top: 1rem;
 }
+
+button{
+    margin-left: 5px;
+}
+
+.expansion-container{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
