add claims for users, remove claims, move experience to experience control panel

--- a/angular-myownweb/src/app/ui/pages/experience-page/create-experience/create-experience.component.html
+++ b/angular-myownweb/src/app/ui/pages/experience-page/create-experience/create-experience.component.html
@@ -1,4 +1,4 @@
 <app-create-entity
 [form]="experienceForm"
-indexRoute="/{{[urlStrings.urlExperience]}}"
+indexRoute="/{{[urlStrings.urlControlPanel+ '/' +urlStrings.urlExperienceControlPanel]}}"
 title="{{'createExperience' | translate}}"></app-create-entity>
