--- a/angular-myownweb/src/app/ui/pages/experience-page/edit-experience/edit-experience.component.html
+++ b/angular-myownweb/src/app/ui/pages/experience-page/edit-experience/edit-experience.component.html
@@ -1,5 +1,5 @@
 <app-edit-entity
 [form]="experienceForm"
 title="{{'editExperience' | translate}}"
-indexRoute="/{{[urlStrings.urlExperience]}}"
+indexRoute="/{{[urlStrings.urlControlPanel+ '/' +urlStrings.urlExperienceControlPanel]}}"
 [id]="id"></app-edit-entity>
