--- a/angular-myownweb/src/app/ui/pages/authorization-page/edit-claims-user/edit-claims-user.component.html
+++ b/angular-myownweb/src/app/ui/pages/authorization-page/edit-claims-user/edit-claims-user.component.html
@@ -1,1 +1,50 @@
-<p>edit-claims-user works!</p>
+<h2>{{'edit' | translate}}: {{username}}</h2>
+
+@if(loading)
+{
+<a mat-button class="reload-container" (click)="reloadContent()">{{'reload' | translate}}</a>
+<app-show-errors [errors]="errors" [errorNeedToTranslate]="true"></app-show-errors>
+<app-loading></app-loading>
+} @else{
+<form (submit)="addClaims()" [formGroup]="form" class="form-container">
+    <ng-container>
+        <mat-form-field>
+            <mat-label>{{"controlPanel.users.claim" | translate}}</mat-label>
+            <input matInput [formControl]="form.controls.claimType">
+            <mat-hint>{{'controlPanel.users.claim.hint' | translate}}</mat-hint>
+        </mat-form-field>
+    </ng-container>
+    <div class="button-container"></div>
+    <ng-container>
+        <button type="submit" mat-flat-button [disabled]="form.invalid">{{"save" | translate}}</button>
+    </ng-container>
+</form>
+
+<table mat-table [dataSource]="claim.claimType" class="mat-elevation-z8 index-elements">
+    <ng-container matColumnDef="claimType">
+        <th mat-header-cell *matHeaderCellDef>{{"controlPanel.users.claim" | translate}}</th>
+        <td mat-cell *matCellDef="let element">{{element}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>{{"actions" | translate}}</th>
+        <td mat-cell *matCellDef="let element">
+            <button mat-flat-button color="warn"
+                [swal]="{title: 'confirm' | translate, text: 'controlPanel.users.claim.delete' | translate: {value: element}, showCancelButton: true}"
+                (confirm)="removeClaim(element)">
+                {{"delete" | translate}}
+            </button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToShow"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnsToShow"></tr>
+
+</table>
+}
+
+<div class="return-container">
+    <a mat-stroked-button routerLink="../../">{{"return" | translate}}
+        <mat-icon>subdirectory_arrow_left</mat-icon>
+    </a>
+</div>
