--- a/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
+++ b/angular-myownweb/src/app/ui/pages/show-translate-strings-page/show-translate-strings.component.html
@@ -1,7 +1,7 @@
 <h2>{{'showStrings' | translate}}</h2>
 
 <mat-form-field class="mat-elevation-z8">
-    <mat-label>Filter</mat-label>
+    <mat-label>{{'filter' | translate}}</mat-label>
     <input matInput type="search" (keyup)="applyFilter($event)" #input>
 </mat-form-field>
 
